--- a/moveimg.html
+++ b/moveimg.html
@@ -1,6 +1,7 @@
 <html>
 <head>
     <title>MOVING IMAGE</title>
+    <link rel="stylesheet"  type="text/css" href="movingimg.css">
 </head>
 <script type="text/javascript">
 
@@ -15,6 +16,7 @@ document.getElementById('image').style.position="absolute";
 }
 
 
+
 </script>
 
 
@@ -23,12 +25,15 @@ document.getElementById('image').style.position="absolute";
 
 <body>
     
-    <h1>MOVING PICTURES</h1>
+    <h1 style="background-color: aquamarine;">MOVING PICTURES</h1>
     <br>
 
 <img id="image" src="wave.gif"
+
 onclick="moveleft()"
-onclick="moveback()" />
+onclick="moveback()" 
+/>
+<h2 style="background-color: aqua; ">WAVE</h2>
 <br>
 <br>
 <br>
@@ -37,6 +42,7 @@ onclick="moveback()" />
 <img id="image" src="rab.gif"
 onclick="moveleft()"
 onclick="moveback()" />
+<h2 style="background-color: darkgreen; ">RABBIT</h2>
 <br>
 <br>
 <br>
@@ -45,6 +51,7 @@ onclick="moveback()" />
 <img id="image" src="thanku.gif"
 onclick="moveleft()"
 onclick="moveback()" />
+<h2 style="background-color: cornsilk;">THANKYOU</h2>
 <br>
 <br>
 <br>
@@ -53,6 +60,7 @@ onclick="moveback()" />
 <img id="image" src="quick.gif"
 onclick="moveleft()"
 onclick="moveback()" />
+<h2 style="background-color: chocolate;">HELLO</h2>
 <br>
 <br>
 <br>
