--- a/background.html
+++ b/background.html
@@ -8,7 +8,7 @@
 
 <script>
 function myFunction() {
-  document.body.style.backgroundColor = "orange";
+  document.body.style.backgroundColor = "blue";
 }
 </script>
 
