--- a/clock.html
+++ b/clock.html
@@ -7,14 +7,14 @@
     
     <style>
         div {
-          border: 4px solid brown;
+          border: 4px solid rgb(71, 58, 184);
           padding: 10px;
-  box-shadow: 2px 10px burlywood;
+  box-shadow: 2px 10px rgb(111, 171, 219);
           margin-top: 100px;
           margin-bottom: 100px;
           margin-right: 150px;
           margin-left: 80px;
-          background-color: white;
+          background-color: rgb(186, 202, 212);
         }
         </style>
     <body>
